# TestTask

./: .gitignore  CMakeLists.txt  controller.cpp  controller.h  fileanalyzer.cpp  fileanalyzer.h  main.cpp  main.qml
